--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.27.1",
     "lucide-react": "^0.562.0",
+    "puppeteer": "^24.35.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.4.0"
